# biquadris

./: CMakeLists.txt  Makefile  README.md  blockcontent.cpp  blockcontent.h  blockoperation.cpp  blockoperation.h  board.cc  board.h  cell.cpp  cell.h  centralcommand.cc  centralcommand.h  choice.cc  choice.h  counterrotateoperation.cpp  counterrotateoperation.h  downoperation.cpp  downoperation.h  factoryblock.cpp  factoryblock.h  iblockcontent.cpp  iblockcontent.h  jblockcontent.cpp  jblockcontent.h  lblockcontent.cpp  lblockcontent.h  leftoperation.cpp  leftoperation.h  level.cpp  level.h  level0block.cpp  level0block.h  level1block.cpp  level1block.h  level2block.cpp  level2block.h  level3block.cpp  level3block.h  main.cpp  (+27 more)
